--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "mongodb": "^3.1.1",
     "request": "^2.87.0",
-    "request-promise": "^4.2.2",
-    "sync-request": "^6.0.0"
+    "request-promise": "^4.2.2"
   }
 }
